--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -225,24 +225,25 @@ No $k^+$ production rates exist for proton-beryllium interactions at 8.89 GeV/c 
 The major contribution that the $k^0$ makes to the BNB flux is from the decay of the $k^0_L$. The $k^0$ that are produced via strong interactions have equal contents of $k^0_L$ and $k^0_s$, therefore the production rate of $k^0_L$ can be inferred from knowing the production rate of $k^0_s$. The Sanford-Wang parametrisation is again used to estimate the production cross-section by combining data from the BNL E910 experiment at 12.3 GeV/c and 17.5 GeV/c and the KEK experiment at 12.3 GeV/c.
 
 For the $k^-$, there is minimal production data available, therefore, simulations are used exclusively. The rate and spectrum of the $k^-$ are estimated by simulating 8.89 GeV/c proton-beryllium interactions \cite{BNB_flux}.
-
+\renewcommand{\arraystretch}{1.4}    
 \begin{table}[!h]
   \renewcommand{\arraystretch}{1.4}    
-  \begin{tabular}{p{1.8cm} p{5.3cm} p{1.6cm} p{1.6cm} p{1.6cm} p{1.6cm}}
+  %\begin{tabular}{p{1.8cm} p{5.3cm} p{1.6cm} p{1.6cm} p{1.6cm} p{1.6cm}}
+  \begin{tabular}{p{2cm} p{3.5cm} p{1.6cm} p{1.6cm} p{1.6cm} p{1.6cm}}
     \toprule
-    \multirow{2}{*}{Parameter} & \multirow{2}{*}{Description} & \multicolumn{4}{c}{Uncertainty} \\
+    \multirow{2}{*}{Parameter} & \multirow{2}{*}{$\nu$ production} & \multicolumn{4}{c}{Uncertainty} \\
     && \multicolumn{1}{c}{$\nu_{\mu}$} & \multicolumn{1}{c}{$\bar{\nu}_{\mu}$} & \multicolumn{1}{c}{$\nu_{e}$} & \multicolumn{1}{c}{$\bar{\nu}_{e}$} \\
     \midrule
 
-    $f_{\pi^{+}}$ & $\nu$ production mechanism: $\pi^{+}$ & $ \pm 11.7 \%$ & $ \pm 1.0 \%$ & $ \pm 10.7 \%$ & $ \pm 0.03 \%$ \\
+    $f_{\pi^{+}}$ & Mechanism: $\pi^{+}$ & $ \pm 11.7 \%$ & $ \pm 1.0 \%$ & $ \pm 10.7 \%$ & $ \pm 0.03 \%$ \\
 
-    $f_{\pi^{-}}$ & $\nu$ production mechanism: $\pi^{-}$ & $ \pm 0.0 \%$ & $ \pm 11.6 \%$ & $ \pm 0.0 \%$ & $ \pm 3.0 \%$ \\
+    $f_{\pi^{-}}$ & Mechanism: $\pi^{-}$ & $ \pm 0.0 \%$ & $ \pm 11.6 \%$ & $ \pm 0.0 \%$ & $ \pm 3.0 \%$ \\
 
-    $f_{K^{+}}$   & $\nu$ production mechanism: $K^{+}$ & $ \pm 0.2 \%$ & $ \pm 0.1 \%$ & $ \pm 2.0 \%$ & $ \pm 0.1 \%$ \\
+    $f_{K^{+}}$   & Mechanism: $K^{+}$ & $ \pm 0.2 \%$ & $ \pm 0.1 \%$ & $ \pm 2.0 \%$ & $ \pm 0.1 \%$ \\
                   
-    $f_{K^{-}}$   & $\nu$ production mechanism: $K^{-}$ & $ \pm 0.0 \%$ & $ \pm 0.4 \%$ & $ \pm 0.0 \%$ & $ \pm 3.0 \%$ \\
+    $f_{K^{-}}$   & Mechanism: $K^{-}$ & $ \pm 0.0 \%$ & $ \pm 0.4 \%$ & $ \pm 0.0 \%$ & $ \pm 3.0 \%$ \\
                   
-    $f_{K^{0}}$   & $\nu$ production mechanism: $K^{0}$ & $ \pm 0.0 \%$ & $ \pm 0.3 \%$ & $ \pm 2.3 \%$ & $ \pm 21.4 \%$ \\
+    $f_{K^{0}}$   & Mechanism: $K^{0}$ & $ \pm 0.0 \%$ & $ \pm 0.3 \%$ & $ \pm 2.3 \%$ & $ \pm 21.4 \%$ \\
 
     \bottomrule
   \end{tabular}
@@ -330,7 +331,7 @@ The proposal systematics only included a set of cross-section parameters which a
 
 \begin{table}[h!]
     \renewcommand{\arraystretch}{1.4}
-    \begin{tabular}{p{1.8cm} p{10cm}>{\centering\arraybackslash}p{ 2.2cm}}
+    \begin{tabular}{p{1.9cm} p{9.25cm}>{\centering\arraybackslash}p{2.06cm}}
         \toprule
          Parameter & Description & $\delta P / P$ \\
         \midrule
@@ -342,37 +343,37 @@ The proposal systematics only included a set of cross-section parameters which a
          
          $f_{NC}$              & Additional error on NC/CC ratio & $\pm 25\%$ \\
          
-         $f_{nR_{\nu n}^{CC1\pi}}$ & Non-resonance bkg normalisation in $\nu n$ CC1$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\nu n}^{CC1\pi}}$ & Non-Res bkg normalisation in $\nu n$ CC1$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\nu p}^{CC1\pi}}$ & Non-resonance bkg normalisation in $\nu p$ CC1$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\nu p}^{CC1\pi}}$ & Non-Res bkg normalisation in $\nu p$ CC1$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\nu n}^{CC2\pi}}$ & Non-resonance bkg normalisation in $\nu n$ CC2$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\nu n}^{CC2\pi}}$ & Non-Res bkg normalisation in $\nu n$ CC2$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\nu p}^{CC2\pi}}$ & Non-resonance bkg normalisation in $\nu p$ CC2$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\nu p}^{CC2\pi}}$ & Non-Res bkg normalisation in $\nu p$ CC2$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\bar{\nu} n}^{CC1\pi}}$ & Non-resonance bkg normalisation in $\bar{\nu} n$ CC1$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\bar{\nu} n}^{CC1\pi}}$ & Non-Res bkg normalisation in $\bar{\nu} n$ CC1$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\bar{\nu} p}^{CC1\pi}}$ & Non-resonance bkg normalisation in $\bar{\nu} p$ CC1$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\bar{\nu} p}^{CC1\pi}}$ & Non-Res bkg normalisation in $\bar{\nu} p$ CC1$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\bar{\nu} n}^{CC2\pi}}$ & Non-resonance bkg normalisation in $\bar{\nu} n$ CC2$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\bar{\nu} n}^{CC2\pi}}$ & Non-Res bkg normalisation in $\bar{\nu} n$ CC2$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\bar{\nu} p}^{CC2\pi}}$ & Non-resonance bkg normalisation in $\bar{\nu} p$ CC2$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\bar{\nu} p}^{CC2\pi}}$ & Non-Res bkg normalisation in $\bar{\nu} p$ CC2$\pi$ reactions & $\pm 50\%$ \\
         
-         $f_{nR_{\nu n}^{NC1\pi}}$ & Non-resonance bkg normalisation in $\nu n$ NC1$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\nu n}^{NC1\pi}}$ & Non-Res bkg normalisation in $\nu n$ NC1$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\nu p}^{NC1\pi}}$ & Non-resonance bkg normalisation in $\nu p$ NC1$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\nu p}^{NC1\pi}}$ & Non-Res bkg normalisation in $\nu p$ NC1$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\nu n}^{NC2\pi}}$ & Non-resonance bkg normalisation in $\nu n$ NC2$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\nu n}^{NC2\pi}}$ & Non-Res bkg normalisation in $\nu n$ NC2$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\nu p}^{NC2\pi}}$ & Non-resonance bkg normalisation in $\nu p$ NC2$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\nu p}^{NC2\pi}}$ & Non-Res bkg normalisation in $\nu p$ NC2$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\bar{\nu} n}^{NC1\pi}}$ & Non-resonance bkg normalisation in $\bar{\nu} n$ NC1$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\bar{\nu} n}^{NC1\pi}}$ & Non-Res bkg normalisation in $\bar{\nu} n$ NC1$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\bar{\nu} p}^{NC1\pi}}$ & Non-resonance bkg normalisation in $\bar{\nu} p$ NC1$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\bar{\nu} p}^{NC1\pi}}$ & Non-Res bkg normalisation in $\bar{\nu} p$ NC1$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\bar{\nu} n}^{NC2\pi}}$ & Non-resonance bkg normalisation in $\bar{\nu} n$ NC2$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\bar{\nu} n}^{NC2\pi}}$ & Non-Res bkg normalisation in $\bar{\nu} n$ NC2$\pi$ reactions & $\pm 50\%$ \\
          
-         $f_{nR_{\bar{\nu} p}^{NC2\pi}}$ & Non-resonance bkg normalisation in $\bar{\nu} p$ NC2$\pi$ reactions & $\pm 50\%$ \\
+         $f_{nR_{\bar{\nu} p}^{NC2\pi}}$ & Non-Res bkg normalisation in $\bar{\nu} p$ NC2$\pi$ reactions & $\pm 50\%$ \\
         
         \bottomrule
         
@@ -388,7 +389,7 @@ The modern systematics include an additonal set of cross-section parameters whic
 
 \begin{table}[h!]
     \renewcommand{\arraystretch}{1.4}
-    \begin{tabular}{p{1.8cm} p{10cm}>{\centering\arraybackslash}p{ 2.2cm}}
+    \begin{tabular}{p{1.9cm} p{9.25cm}>{\centering\arraybackslash}p{2.06cm}}
         \toprule
          Parameter & Description & $\delta P / P$ \\
         \midrule
@@ -426,30 +427,30 @@ The modern systematics include an additonal set of cross-section parameters whic
 
 \begin{table}[!h]
     \renewcommand{\arraystretch}{1.4}
-    \begin{tabular}{p{1.8cm} p{11.4cm} p{1.2cm}}
+    \begin{tabular}{p{1.9cm} p{9.25cm} p{2.06cm}}
         \toprule
          Parameter & Description & $\delta P / P$ \\
         \midrule
         
-         $f_{\lambda_{\pi}}$   & Intranuclear mean free path for pions & $ \pm 20 \% $ \\
+         $f_{\lambda_{\pi}}$   &  Mean free path for pions & $ \pm 20 \% $ \\
         
-         $f_{R^{CEx}_{\pi}}$    & Intranuclear charge exchange rescattering fraction for pions & $ \pm 50 \% $ \\
+         $f_{R^{CEx}_{\pi}}$    &  Charge exchange rescattering fraction for pions & $ \pm 50 \% $ \\
         
-         $f_{R^{Inel}_{\pi}}$   & Intranuclear inelastic rescattering fraction for pions & $ \pm 40 \% $ \\
+         $f_{R^{Inel}_{\pi}}$   &  Inelastic rescattering fraction for pions & $ \pm 40 \% $ \\
         
-         $f_{R^{\pi}_{\pi}}$    & Intranuclear pion-production rescattering fraction for pions & $ \pm 20 \% $ \\
+         $f_{R^{\pi}_{\pi}}$    &  Pion-production rescattering fraction for pions & $ \pm 20 \% $ \\
         
-         $f_{R^{Abs}_{\pi}}$    & Intranuclear absorption fraction for pions & $ \pm 20 \% $ \\
+         $f_{R^{Abs}_{\pi}}$    &  Absorption fraction for pions & $ \pm 20 \% $ \\
         
-         $f_{\lambda_{N}}$     & Intranuclear mean free path for nucleons & $ \pm 20 \% $ \\
+         $f_{\lambda_{N}}$     &  Mean free path for nucleons & $ \pm 20 \% $ \\
         
-         $f_{R^{CEx}_{N}}$      & Intranuclear charge exchange rescattering fraction for nucleons & $ \pm 50 \%$ \\
+         $f_{R^{CEx}_{N}}$      &  Charge exchange rescattering fraction for nucleons & $ \pm 50 \%$ \\
         
-         $f_{R^{Inel}_{N}}$     & Intranuclear inelastic rescattering fraction for nucleons & $ \pm 40 \% $ \\
+         $f_{R^{Inel}_{N}}$     &  Inelastic rescattering fraction for nucleons & $ \pm 40 \% $ \\
         
-         $f_{R^{\pi}_{N}}$      & Intranuclear pion-production rescattering fraction for nucleons & $ \pm 20 \% $ \\
+         $f_{R^{\pi}_{N}}$      &  Oion-production rescattering fraction for nucleons & $ \pm 20 \% $ \\
         
-         $f_{R^{Abs}_{N}}$      & Intranuclear absorption fraction for nucleons & $ \pm 20 \% $ \\
+         $f_{R^{Abs}_{N}}$      &  Absorption fraction for nucleons & $ \pm 20 \% $ \\
 
         \bottomrule
     \end{tabular}
