--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -1,6 +1,11 @@
 %% Title
-\titlepage[Univeristy of Liverpool]{%
-  Some more stuff}
+%\DTMlangsetup[en-US]{showyear=false}
+\titlepage[\phantom{This text will be invisible} \\ 
+\monthyeardate]
+{% 
+Thesis submitted in accordance with the requirements of the University of Liverpool for the degree of Doctor in Philosophy}
+
+
 
 %% Acknowledgements
 \begin{acknowledgements}
