--- a/appendices.tex
+++ b/appendices.tex
@@ -44,5 +44,34 @@ genie_ccresAxial_Genie,genie_ncresAxial_Genie,genie_qema_Genie,genie_NC_Genie,ge
 }
 \caption[Modern interaction systematic parameter validation.]{A comparison of the +3$\sigma$ variations from the response functions used by VALOR and the universes for the complete set of modern cross-section systematic parameters.}
 \end{figure}
+
+\chapter{Detector Volumes}
+\label{app:Detector_Volumes}
+
+
+\begin{table}[h!]
+\begin{tabular}{lrrr}
+ & \multicolumn{1}{c}{X [cm]} & \multicolumn{1}{c}{Y [cm]} & \multicolumn{1}{c}{Z [cm]} \\ \cline{2-4} 
+ & \multicolumn{3}{c}{Active Volume} \\ \cline{2-4} 
+SBND & -199.15 -- 199.15 & -200.00 -- 200.00 & 0.00 -- 500.00 \\
+MicroBooNE & -1.55 -- 254.80 & -115.53 -- 117.47 & 0.10 -- 1036.90 \\
+ICARUS Module 1 & -364.49 -- -67.94 & -173.41 -- 143.41 & -909.95 -- 879.95 \\
+ICARUS Module 2 & 67.94 -- 364.49 & -173.41 -- 143.41 & -909.95 -- 879.95 \\ \cline{2-4} 
+ & \multicolumn{3}{c}{Fiducial Volume} \\ \cline{2-4} 
+SBND TPC 1 & -190.90 -- 5.60 & -185.00 -- 185.00 & 15.00 -- 415.00 \\
+SBND TPC 2 & 10.90 -- 190.90 & -185.00 -- 185.00 & 15.00 -- 415.00 \\
+MicroBooNE & -1.55 -- 229.80 & -90.53 -- 92.47 & 30.10 -- 986.90 \\
+ICARUS TPC 1 & -339.49 -- -221.04 & -148.41 -- 118.41 & -879.95 -- 829.95 \\
+ICARUS TPC 2 & -218.89 -- -92.94 & -148.41 -- 118.41 & -879.95 -- 829.95 \\
+ICARUS TPC 3 & 92.94 -- 211.39 & -148.41 -- 118.41 & -879.95 -- 829.95 \\
+ICARUS TPC 4 & 214.39 -- 339.39 & -148.41 -- 118.41 & -879.95 -- 829.95
+\end{tabular}
+\caption[The active and fiducial volumes of the \gls{sbn} detectors.]{The dimensions defining the active and fiducial volumes for each \gls{sbn} detector using their respective coordinate systems.} \label{table:active_and_fiducial_volumes}
+\end{table}
+
+
+
+
+
 %% Big appendixes should be split off into separate files, just like chapters
 %\input{app-myreallybigappendix}
