--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 %documentclass[hyperpdf,nobind,draft,hidefrontback]{hepthesis}
 
 %%For Cambridge soft-bound version
-\documentclass[hyperpdf,bind]{hepthesis}
+\documentclass[hyperpdf,bindnopdf]{hepthesis}
 %% For Cambridge hard-bound version (must be one-sided)
 %\documentclass[hyperpdf,oneside]{hepthesis}
 %%Get rid of warnings about list of figures and tables but also remove from ToC
@@ -58,10 +58,10 @@
   \input{chap1-introduction}
   \input{chap2-motivation_for_steriles}
   \input{chap3-SBN_Program}
-  \input{chap4-Energy_Reco}
-  \input{chap5-oscillation_inputs}
-  \input{chap6-valor_analysis}
-  \input{chap7-Conclusion}
+  %\input{chap4-Energy_Reco}
+  %\input{chap5-oscillation_inputs}
+  %\input{chap6-valor_analysis}
+  %\input{chap7-Conclusion}
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
   %\input{chap4}
 \end{mainmatter}
