--- a/mythesis.bib
+++ b/mythesis.bib
@@ -678,6 +678,18 @@ month = {7}
     Series = "BestMaster"
 }
 
+@article{PDG_fiducial_vol,
+    author = "Workman, R. L. and Others",
+    collaboration = "Particle Data Group",
+    title = "{Review of Particle Physics: Particle Detectors for Non-Accelerator Physics}",
+    doi = "10.1093/ptep/ptac097",
+    journal = "PTEP",
+    volume = "2022",
+    pages = "083C01",
+    year = "2022",
+    url = https://pdg.lbl.gov/2022/reviews/rpp2022-rev-particle-detectors-non-accel.pdf
+}
+
 @article{Jaffe_model,
 author = {Jaffé, George},
 title = "{Zur Theorie der Ionisation in Kolonnen}",
